[metadata]
name = easul
author = Rob Free
author_email = rcfree@pm.me
url = https://github.com/rcfgroup/{name}
description = Embeddable AI and State-based Understandable Logic toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE.md
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/rcfgroup/{name}/issues
    Changelog = https://github.com/rcfgroup/{name}/blob/main/CHANGELOG.md

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100

[isort]
multi_line_output=3
force_grid_wrap=0
use_parentheses=True
line_length = 100
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = cmprhnd
include_trailing_comma = True
length_sort = True

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
setup_requires = setuptools_scm
install_requires =
    stringcase
    PyYaml
    Cerberus
    pandas
    dominate
    jinja2
    pillow
    scikit-learn
    dill
    matplotlib
    lime
    numpy
    colour
    attrs
    anys
    pytest
    typer


[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mock
docs =
  mkdocs
  mkapi
dev =
  twine
  wheel