[metadata]
name = easul
author = Rob Free
author_email = rcfree@pm.me
url = https://github.com/rcfgroup/easul
description = Embeddable AI and State-based Understandable Logic toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPLv3
license_file = LICENSE.md
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Bug Tracker = https://github.com/rcfgroup/easul/issues
    Changelog = https://github.com/rcfgroup/easul/blob/main/CHANGELOG.md

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100

[isort]
multi_line_output=3
force_grid_wrap=0
use_parentheses=True
line_length = 100
not_skip = __init__.py
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
known_first_party = cmprhnd
include_trailing_comma = True
length_sort = True

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
setup_requires = setuptools_scm
install_requires =
    stringcase
    PyYaml
    Cerberus
    pandas
    dominate
    jinja2
    pillow
    scikit-learn
    dill
    matplotlib
    lime
    numpy
    colour
    attrs
    anys
    pytest
    typer
    msgpack


[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mock
docs =

dev =
  twine
  wheel